BAP-1287: Make menu over messages  - fixed z-index for flash messages container

--- a/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -3119,7 +3119,7 @@ select:focus:invalid:focus {
   position: fixed;
   top: 70px;
   left: 0;
-  z-index: 800;
+  z-index: 500;
   .box-sizing(border-box);
   padding: 0 10px;
   width: 100%;
